# neocortex

./: .gitignore  AGENTS.md  DESIGN.md  pyproject.toml
.agents/skills/akshare-api/: SKILL.md
.agents/skills/dev-standards/: SKILL.md
.agents/skills/python-dev-standards/: SKILL.md
config/: config.yaml  storage.yaml
docs/: cli.md
scripts/: backfill_company_profiles.py  check.sh  query_db.py
skills/akshare-api/: SKILL.md
skills/akshare-api/references/: official-docs.md
skills/dev-standards/references/: maintenance.md
skills/neocortex/: SKILL.md
skills/neocortex/agents/: openai.yaml
skills/neocortex/references/: cli.md
skills/neocortex/scripts/: run_neocortex.py
skills/python-dev-standards/: SKILL.md
src/alphaforge/: __init__.py
src/alphaforge/connectors/: __init__.py  (+3 more)
src/neocortex/: __init__.py  __main__.py  cli.py  date_resolution.py  log.py  markets.py  security_resolution.py  serialization.py  tabular.py
tests/: test_connectors.py  test_markets.py  test_models.py
tests/core/: _market_data_provider_fakes.py  cli_test_support.py  command_test_support.py  db_query_test_support.py  feishu_storage_test_support.py  feishu_test_support.py  test_agent_base_ct.py  test_agent_models_ct.py  test_agents_ct.py  test_akshare_connector_ct.py  test_baostock_connector_ct.py  test_cli_agent_ct.py  test_cli_command_kernel_ct.py  test_cli_connector_ct.py  test_cli_ct.py  test_cli_db_ct.py  test_cli_feishu_ct.py  test_cli_indicator_ct.py  test_cli_provider_ct.py  test_cli_sync_ct.py  test_commands_ct.py  test_company_profiles_ct.py  test_connectors_ct.py  test_db_route_reader_ct.py  test_efinance_connector_ct.py  test_env_ct.py  test_feishu_cards_ct.py  test_feishu_commands_ct.py  test_feishu_longconn_ct.py  test_feishu_service_ct.py  test_feishu_storage_ct.py  test_foundation_ct.py  test_indicators_ct.py  test_pipeline_ct.py  test_prompts_ct.py  test_query_db_ct.py  test_read_through_market_data_provider_ct.py  test_retry_ct.py  test_source_route_fetcher_ct.py
tests/regression/: test_agents_rt.py  test_akshare_connector_rt.py  test_indicators_rt.py  test_models_rt.py
(+108 files in other folders)
