[project]
name = "neocortex"
version = "0.1.0"
description = "Neocortex multi-market prompt-driven equity research platform"
readme = "DESIGN.md"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.18.40",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
